compiler/testData/cli/jvm/XeagerLambdaAnalysis/executorSubmitDefault.out
compiler/testData/cli/jvm/XeagerLambdaAnalysis/executorSubmit.kt:13:24: error: argument type mismatch: actual type is 'Future<CapturedType(*)>!', but 'Future<String>' was expected.
    expectFutureString(future)
                       ^^^^^^
COMPILATION_ERROR
